# cs50w

./: .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.og  README.md  Tiltfile  docker-compose.yml  harden  justfile  kubernetes.yml  pyproject.toml  requirements.txt  startup.sh
app/: .env.example
app/commerce/auctions/: models.py  urls.py
app/commerce/auctions/templates/auctions/: categories.html  create.html  layout.html
app/project/0/: Dockerfile  advanced.html  devspace.yaml  docker-compose.yml  image.html  index.html  justfile  main.py  pyproject.toml  requirements.txt  styles.css
app/project/commerce/: README.md
app/project/commerce/auctions/: forms.py  urls.py  views.py
app/project/commerce/auctions/templates/auctions/: index.html  listing.html  watchlist.html
app/project/commerce/commerce/: settings.py
app/project/search/: README.md  devspace.yaml  pyproject.toml  requirements.txt
app/project/wiki/: README.md  manage.py  pyproject.toml  requirements.txt
app/project/wiki/conf/: asgi.py  settings.py  urls.py  wsgi.py
app/project/wiki/encyclopedia/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  util.py  views.py
app/project/wiki/encyclopedia/entries/: Code_Gang.md
app/project/wiki/encyclopedia/migrations/: 0001_initial.py
app/project/wiki/encyclopedia/static/: styles.css
app/project/wiki/encyclopedia/static/encyclopedia/: styles.css
app/project/wiki/encyclopedia/templates/: create.html  edit.html  edit_list.html  entry.html  index.html  layout.html  random.html  search.html
app/project/wiki/encyclopedia/templates/encyclopedia/: 404.html  entry.html  index.html  layout.html
app/project/wiki/static/encyclopedia/: views.py
app/project/wiki/static/wiki/: urls.py
app/project/wiki/wiki/: asgi.py  settings.py  urls.py  wsgi.py
app/search/: Dockerfile  advanced.html  docker-compose.yml  styles.css
app/wiki/conf/: urls.py
app/wiki/encyclopedia/: forms.py  views.py
app/wiki/encyclopedia/templates/: edit_list.html  index.html  layout.html
conf/: settings.py
encyclopedia/: util.py  views.py
encyclopedia/templates/: edit.html  search.html
markdown/: kubernetes.md
